--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
 android {
     namespace 'com.snapcatcher.snapcatcher'
-    compileSdk 31
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.snapcatcher.snapcatcher"
@@ -27,11 +27,13 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
+
 dependencies {
+
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation 'com.stericson.roottools:roottools:4.6.1'
+    implementation 'com.scottyab:rootbeer-lib:0.1.0'
 }
